Actions
Bug #8399
closedsun_fc: in C++11 destructors default to noexcept
Start date:
2017-06-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error with gcc 6:
../common/Handle.cc: In destructor 'Handle::~Handle()': ../common/Handle.cc:172:6: error: throw will always call terminate() [-Werror=terminate] throw; ^~~~~ ../common/Handle.cc:172:6: note: in C++11 destructors default to noexcept ../common/Handle.cc:187:6: error: throw will always call terminate() [-Werror=terminate] throw; ^~~~~ ../common/Handle.cc:187:6: note: in C++11 destructors default to noexcept cc1plus: all warnings being treated as errors
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 7f6d142fc0001e76967b1f047b6df5bc4c5d9082
commit 7f6d142fc0001e76967b1f047b6df5bc4c5d9082 Author: Toomas Soome <tsoome@me.com> Date: 2017-07-28T18:22:53.000Z 8399 sun_fc: in C++11 destructors default to noexcept Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Vitaliy Gusev <gusev.vitaliy@icloud.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions