8399 sun_fc: in C++11 destructors default to noexcept

../common/Handle.cc: In destructor 'Handle::~Handle()':
../common/Handle.cc:172:6: error: throw will always call terminate() [-Werror=terminate]
      throw;
      ^~~~~
../common/Handle.cc:172:6: note: in C++11 destructors default to noexcept
../common/Handle.cc:187:6: error: throw will always call terminate() [-Werror=terminate]
      throw;
      ^~~~~
../common/Handle.cc:187:6: note: in C++11 destructors default to noexcept
cc1plus: all warnings being treated as errors